2008-09-15  Wakaba  <wakaba@suika.fam.cx>

	* error-description-source.xml: "control char" errors are now
	handled by UnicodeChecker module.  New "non unicode" error added.

2008-09-11  Wakaba  <wakaba@suika.fam.cx>

	* error-description-source.xml: Unicode checker
	errors are added.

2008-09-10  Wakaba  <wakaba@suika.fam.cx>

	* error-description-source.xml: Encoding layer errors added.

2008-08-31  Wakaba  <wakaba@suika.fam.cx>

	* error-description-source.xml: More error descriptions.

2008-08-30  Wakaba  <wakaba@suika.fam.cx>

	* error-description-source.xml: Descriptions for new error
	types are added.

2008-08-30  Wakaba  <wakaba@suika.fam.cx>

	* cc-style.css: Rule for empty |mark| elements is added.

	* error-description-source.xml: Error message for
	unknown address type error is updated.

2008-08-29  Wakaba  <wakaba@suika.fam.cx>

	* error-description-source.xml: Error types added for IMTChecker.

2008-08-22  Wakaba  <wakaba@suika.fam.cx>

	* error-description-source.xml: More l10n.

	* mkdescription.pl: Fallback <html:title> to xml:lang=en's one.

2008-08-22  Wakaba  <wakaba@suika.fam.cx>

	* error-description-source.xml: Localize "no more information"
	message.

2008-08-17  Wakaba  <wakaba@suika.fam.cx>

	* cc-about.en.html: Author section added.

	* cc.cgi: |text/x-h2h| added.

2008-08-16  Wakaba  <wakaba@suika.fam.cx>

	* Makefile: Generate Japanese version of error description document.

	* cc-script.js, cc-style.css: Support for help popup.

	* error-description-source.xml: Descriptions are added
	to the description of WebHACC itself and descriptions
	of error levels.  Old error level table is removed.

	* mkdescription.pl: Assume the second argument is
	the language.  Support for d:cat/d:desc.

2008-08-16  Wakaba  <wakaba@suika.fam.cx>

	* error-description-source.xml: Error for CSS cursor: hand
	is added.

2008-08-16  Wakaba  <wakaba@suika.fam.cx>

	* cc-script.js: Support for #index- fragment identifiers.
